# daily_digest

./: .gitignore  .pre-commit-config.yaml  LICENSE  TEST_STATUS.md  calendar_integration_test_output.txt  daily_digest_stories.md  epic2_test_output.txt  error_handling_test_output.txt  google-weather-api-check-curl.sh  motion_api_tasks_response.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  school_week_meal_plan.md  test_calendar_integration_output.txt  test_exceptions_output.txt  test_integration_output.txt  test_monitoring_output.txt
agents/: ba_agent.cursor-agent  dads_helper.cursor-agent  dev-agent.md  pm-agent.cursor-agent
agents/Projects/daily_digest/: architects_brief  daily_digest_brief.md  prd.md
ai/stories/: 3.2.story.md  4.1.story.md  4.2.story.md  4.3.story.md  4.4.story.md  4.5.story.md  4.6.story.md
docs/: API_INTEGRATION.md  ARCHITECTURE.md  CHANGE_REQUEST - 1.1 Google Weather API.md  CHANGE_REQUEST - 1.2 Outlook Calendar Integration.md  CHANGLOG.md  CONTIBUTING.md  FREQUENCY_SCHEDULE.md  IMPLEMENTATION_LESSONS_GOOGLE_WEATHER_API.md  Implementation_plan.md  MIGRATION_GUIDE.md  README.md  SECURITY.md  STORY_PROGRESS.md  WEATHER_MODELS.md  aws_implementation_plan.md  epic1.md  epic2.md  epic3.md  epic4.md  mailersend_migration.md  papercut_smtp_migration.md  prd.md  testing-strategy.md  testing_plan.md
examples/: error_handling_example.py  logging_example.py
scripts/: check_code_quality.py  cleanup.py  create_env_template.py  dev_status.py  get_tasks.py  manual_send_digest.py  simple_motion_test.py
src/: __init__.py
src/api/: __init__.py  motion.py  weather.py
src/core/: scheduler.py
src/core/clients/: weather_client.py
src/core/models/: calendar.py  task.py  weather.py
src/core/monitoring/: alert.py  dashboard.py  health.py  monitor.py  notification.py
src/digest_email/: __init__.py  content_assembler.py  sender.py  template_engine.py
src/email/: __init__.py
src/lambda/: __init__.py
src/utils/: __init__.py  config.py  exceptions.py  logging.py  rate_limiter.py  timezone.py
tests/: __init__.py  conftest.py
tests/api/: test_motion.py  test_weather.py
tests/core/: test_task.py
tests/integration/: test_calendar_integration.py  test_chaos.py  test_data_scenarios.py  test_error_handling.py  test_motion_integration.py  test_performance.py
tests/scripts/: test_get_tasks.py
tests/utils/: test_config.py  test_exceptions.py  test_logging.py  test_rate_limiter.py
(+25 files in other folders)
